apps/media/overseerr/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  labels:
    app: overseerr
    part-of: media
  name: overseerr
spec:
  serviceName: overseerr
  replicas: 1
  selector:
    matchLabels:
      app: overseerr
      part-of: media
  template:
    metadata:
      labels:
        app: overseerr
        part-of: media
    spec:
      containers:
        - image: linuxserver/overseerr:1.33.2
          name: overseerr
          volumeMounts:
            - mountPath: /config
              name: overseerr-config
          ports:
            - name: overseerr
              containerPort: 5055
              protocol: TCP
      volumes:
        - name: arr-init-config
          configMap:
            name: arr-init-config
        - name: overseerr-config
          persistentVolumeClaim:
            claimName: media-overseerr-config
      restartPolicy: Always
