apps/media/overseerr/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: overseerr
  labels:
    app: overseerr
    part-of: media
spec:
  selector:
    app: overseerr
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: overseerr
