apps/media/overseerr/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: overseerr
  labels:
    app.kubernetes.io/name: overseerr
    app.kubernetes.io/instance: overseerr
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: media
    app.kubernetes.io/managed-by: kustomize
  annotations:
    external-dns.alpha.kubernetes.io/hostname: overseerr.home.8none1.com
    external-dns.alpha.kubernetes.io/target: traefik.srv.8none1.com
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`overseerr.home.8none1.com`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: overseerr
          port: http
  tls:
    secretName: overseerr-ingress-tls
